# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = illuminatio
description = The kubernetes network policy validator.
author = inovex GmbH
author-email = list-ito+illuminatio@inovex.de
license = apache
url = https://github.com/inovex/illuminatio
long-description = file: README.md
long-description-content-type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon-separated), e.g.
# install_requires = numpy; scipy
install_requires =
    requests
    google-auth
    python-dateutil
    pyyaml
    oauthlib
    kubernetes
    click
    click_log
    docker
    nsenter
    attrs
    pluggy
    pytest
    urllib3
    setuptools
# Add here test requirements (semicolon-separated)
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests
    .DS_store
    resource
    .coverage

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install illuminatio[PDF]` like:
# PDF = ReportLab; RXP

[options.entry_points]
console_scripts =
    illuminatio = illuminatio.illuminatio:cli
    illuminatio_runner = illuminatio.illuminatio_runner:cli

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov illuminatio --cov-report term-missing -m "not e2e"
    --verbose
norecursedirs =
    dist
    build
    .tox
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    serial

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = illuminatio
